fix: resolve JSON deserialization issue for UpdateUserCommand

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQLConnection": "Host=localhost;Port=5432;Database=employeeUnitDB;Username=postgres;Password=postgres;Pooling=true"
+    "PostgreSQLConnection": "Host=localhost;Database=employeeUnitDB;Username=postgres;Password=postgres;Pooling=true"
   },
   "Logging": {
     "LogLevel": {
