--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,11 +48,11 @@ jobs:
 
     - name: Build and Push in Azure ACR
       run: |
-        docker build . --file ./Dockerfile --tag ${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER
-        docker tag ${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER ${{ secrets.DOCKER_IMAGE }}:latest
-        docker push ${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER
-        docker push ${{ secrets.DOCKER_IMAGE }}
-  
+        docker build . --file ./Dockerfile --tag ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER
+        docker tag ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:latest
+        docker push ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:$GITHUB_RUN_NUMBER
+        docker push ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:latest
+      
   deploy:
     name: Deploying Az Web App
     runs-on: ubuntu-latest
@@ -71,5 +71,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.WEB_APP }}
-          images: ${{ secrets.DOCKER_IMAGE }}:latest
+          images: ${{ secrets.DOCKER_REGISTRY }}/${{ secrets.DOCKER_IMAGE }}:latest
           slot-name: staging
